added swagger spec for controllers