@@ -151,6 +151,11 @@
 			<version>4.12.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.4</version>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.5.25</version>
@@ -211,6 +216,70 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.2</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED ${surefireArgLine}</argLine>
+					<testFailureIgnore>false</testFailureIgnore>
+					<forkCount>2</forkCount>
+					<reuseForks>true</reuseForks>
+				</configuration>
+			 </plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.11</version>
+				<executions>
+				  <execution>
+					 <id>default-prepare-agent</id>
+					 <goals>
+						<goal>prepare-agent</goal>
+					 </goals>
+					 <configuration>
+						<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
+						<propertyName>surefireArgLine</propertyName>
+					 </configuration>
+				  </execution>
+				  <execution>
+					 <id>default-report</id>
+					 <phase>test</phase>
+					 <goals>
+						<goal>report</goal>
+					 </goals>
+					 <configuration>
+						<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
+						<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+					 </configuration>
+				  </execution>
+				  <execution>
+					 <id>default-check</id>
+					 <goals>
+						<goal>check</goal>
+					 </goals>
+					 <configuration>
+						<rules>
+						  <rule>
+							 <element>BUNDLE</element>
+							 <limits>
+								<limit>
+								  <counter>COMPLEXITY</counter>
+								  <value>COVEREDRATIO</value>
+								  <minimum>0.70</minimum>
+								</limit>
+							 </limits>
+						  </rule>
+						</rules>
+					 </configuration>
+				  </execution>
+				</executions>
+			 </plugin>
+			<plugin>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-maven-plugin</artifactId>
+				<version>1.4</version>
 			</plugin>
 		</plugins>
 	</build>
